[package]
name = "input_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
local-ip-address = "0.6.10"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
windows = { version = "0.62.2", features = ["Win32_UI_Input_KeyboardAndMouse"] }
